--- a/branch/find-tutors.html
+++ b/branch/find-tutors.html
@@ -545,7 +545,6 @@
         </div>
     </div>
 
-
     <!-- Enhanced Footer -->
     <footer class="footer-section" id="footer" role="contentinfo">
         <div class="footer-wave" aria-hidden="true">
@@ -618,19 +617,19 @@
                 <div class="footer-section-item">
                     <h3 class="footer-title">Connect With Us</h3>
                     <div class="social-links">
-                        <a href="#" aria-label="Facebook" class="social-link">
+                        <a href="#" aria-label="Facebook" class="social-link" target="_blank" rel="noopener noreferrer">
                             <svg class="w-6 h-6" width="20" height="20" fill="currentColor" viewBox="0 0 24 24">
                                 <path d="M18 2h-3a5 5 0 00-5 5v3H7v4h3v8h4v-8h3l1-4h-4V7a1 1 0 011-1h3V2z"></path>
                             </svg>
                         </a>
-                        <a href="#" aria-label="Twitter" class="social-link">
+                        <a href="#" aria-label="Twitter" class="social-link" target="_blank" rel="noopener noreferrer">
                             <svg class="w-6 h-6" width="20" height="20" fill="currentColor" viewBox="0 0 24 24">
                                 <path
                                     d="M23 3a10.9 10.9 0 01-3.14 1.53 4.48 4.48 0 00-7.86 3v1A10.66 10.66 0 013 4s-4 9 5 13a11.64 11.64 0 01-7 2c9 5 20 0 20-11.5a4.5 4.5 0 00-.08-.83A7.72 7.72 0 0023 3z">
                                 </path>
                             </svg>
                         </a>
-                        <a href="#" aria-label="LinkedIn" class="social-link">
+                        <a href="#" aria-label="LinkedIn" class="social-link" target="_blank" rel="noopener noreferrer">
                             <svg class="w-6 h-6" width="20" height="20" fill="currentColor" viewBox="0 0 24 24">
                                 <path
                                     d="M16 8a6 6 0 016 6v7h-4v-7a2 2 0 00-2-2 2 2 0 00-2 2v7h-4v-7a6 6 0 016-6zM2 9h4v12H2z">
@@ -638,14 +637,16 @@
                                 <circle cx="4" cy="4" r="2"></circle>
                             </svg>
                         </a>
-                        <a href="#" aria-label="Instagram" class="social-link">
+                        <a href="#" aria-label="Instagram" class="social-link" target="_blank"
+                            rel="noopener noreferrer">
                             <svg class="w-6 h-6" width="20" height="20" fill="currentColor" viewBox="0 0 24 24">
                                 <rect x="2" y="2" width="20" height="20" rx="5" ry="5"></rect>
                                 <path d="M16 11.37A4 4 0 1112.63 8 4 4 0 0116 11.37z"></path>
                                 <line x1="17.5" y1="6.5" x2="17.51" y2="6.5"></line>
                             </svg>
                         </a>
-                        <a href="#" aria-label="YouTube" class="social-link">
+                        <a href="https://www.youtube.com/@Astegni" aria-label="YouTube" class="social-link"
+                            target="_blank" rel="noopener noreferrer">
                             <svg class="w-6 h-6" width="20" height="20" fill="currentColor" viewBox="0 0 24 24">
                                 <path
                                     d="M22.54 6.42a2.78 2.78 0 00-1.94-2C18.88 4 12 4 12 4s-6.88 0-8.6.46a2.78 2.78 0 00-1.94 2A29 29 0 001 12a29 29 0 00.46 5.58A2.78 2.78 0 003.4 19.6c1.72.46 8.6.46 8.6.46s6.88 0 8.6-.46a2.78 2.78 0 001.94-2A29 29 0 0023 12a29 29 0 00-.46-5.58zM9.75 15.02V8.98L15.5 12l-5.75 3.02z">
@@ -669,22 +670,24 @@
             <div class="footer-bottom-content">
                 <div class="footer-badges">
                     <div class="company-brand">
-                        <span>From</span>
+                        <span>From the deep of</span>
                         <span class="trademark-symbol">™</span>
-                        <span class="company-text">Eshtaol technologies</span>
+                        <span class="company-text">Eshtaol</span>
                     </div>
                     <a href="tel:+251935244245" class="phone-link">
                         <span class="phone-icon">📞</span>
                         <span>+251-935-24-42-45</span>
+                        <span>+251-997-40-98-66</span>
                     </a>
                 </div>
                 <div class="footer-badges">
-                    <p class="copyright">© 2025 Astegni. All rights reserved.</p>
+                    <p class="copyright">© </p>
+                    <p>2025 Astegni. All rights reserved.</p>
                 </div>
                 <div class="footer-badges">
                     <span class="badge glow" tabindex="0">🔒 SSL Secured</span>
                     <span class="badge" tabindex="0">✓ Verified Platform</span>
-                    <span class="badge" tabindex="0">🏆 Award Winner 2024</span>
+                    <span class="badge" tabindex="0">🏆 Future Awards Winner</span>
                 </div>
             </div>
         </div>
